# SmartHouse

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/project/: Utils.h  telegram_api.h
src/: main.cpp
src/Utils/: UtilsFile.cpp  UtilsHttpRequests.cpp  UtilsLog.cpp  UtilsString.cpp
src/telegram_api/: telegram_api.cpp
